# crs

./: CMakeLists.txt  LICENSE  README.md
both/: argarray.cxx  argarray.hxx
client/: main.c
server/: handler.cxx  main.cxx  possible_layout.cxx  server.cxx  server.hxx
